2009-11-02  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* util/grub.d/30_os-prober.in: Add GNU/Hurd support

2009-11-02  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* util/grub.d/10_hurd.in: Drop /dev/ prefix from root device path before
	giving it to GNU Mach.

2009-11-02  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* util/hostdisk.c (grub_util_biosdisk_get_grub_dev): Subtract 1 from
	GNU partition number to get internal GRUB partition number.

2009-11-02  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* util/grub.d/10_hurd.in: Call prepare_grub_to_access_device
	${GRUB_DEVICE_BOOT} before loading /boot kernel.

2009-11-01  Robert Millan  <rmh.grub@aybabtu.com>

	Based on patch from BVK Chaitanya  <bvk.groups@gmail.com>
	* kern/misc.c (grub_strchr, grub_strrchr): Fix to handle c == '\0'
	case.

2009-11-01  Felix Zielcke  <fzielcke@z-51.de>

	* Makefile.in (TARGET_CPPFLAGS): Add `-I$(srcdir)/include'.

2009-10-30  Robert Millan  <rmh.grub@aybabtu.com>

	Fix build problem.

	* Makefile.in (TARGET_CPPFLAGS): Replace `-nostdinc' with
	`-isystem=$(srcdir)/include'.

2009-10-30  Robert Millan  <rmh.grub@aybabtu.com>

	* util/i386/pc/grub-install.in: Remove hint that device.map should be
	checked (grub-install doesn't currently rely on it).

2009-10-29  Robert Millan  <rmh.grub@aybabtu.com>

	Revert SVN r2660.

	* conf/common.rmk (script/sh/lexer.c_DEPENDENCIES): Moved from here ...
	* conf/i386-coreboot.rmk (script/sh/lexer.c_DEPENDENCIES): ... to here.
	* conf/i386-efi.rmk (script/sh/lexer.c_DEPENDENCIES): ... and here.
	* conf/i386-ieee1275.rmk: Likewise.
	* conf/i386-pc.rmk: Likewise.
	* conf/powerpc-ieee1275.rmk: Likewise.
	* conf/sparc64-ieee1275.rmk: Likewise.
	* conf/x86_64-efi.rmk: Likewise.

2009-10-28  Robert Millan  <rmh.grub@aybabtu.com>

	* Makefile.in (TARGET_CPPFLAGS): Add `-nostdinc'.

2009-10-28  Robert Millan  <rmh.grub@aybabtu.com>

	* include/grub/misc.h: Stop checking for APPLE_CC.
