@@ -1,3 +1,8 @@
+2009-11-03  Samuel Thibault  <samuel.thibault@ens-lyon.org>
+
+	* util/grub.d/30_os-prober.in: Restore default behavior for unsupported
+	OSes.
+
 2009-11-02  Samuel Thibault  <samuel.thibault@ens-lyon.org>
 
 	* util/grub.d/30_os-prober.in: Add GNU/Hurd support
